# numpy-exercise

./: .gitignore  100_Numpy_exercises.ipynb  LICENSE  README.md  pyproject.toml
