[tool.poetry]
name = "numpy-exercise"
version = "0.1.0"
description = ""
authors = ["Tsuyoshi Ishida <tishida@ioa.s.u-tokyo.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
nbformat = "^5.0.8"
mdutils = "^1.3.0"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
